--- a/main.html
+++ b/main.html
@@ -10,6 +10,22 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<h1>Name of the destination</h1><br>
+	<p>Brief overview of the destination</p>
+	<ol>
+		<li><b>Biryani</b></li>
+		<li><strong>Noodles</strong></li>
+		<li><i>Gobi</i></li>
+		<li><em>Mushroom</em></li>
+		<li><i>chicken</i></li>
+	</ol>
+	<ul>
+		<li><em>icecream</em></li>
+		<li><i>mutton</i></li>
+		<li><strong>pulav</strong></li>
+		<li><b>Lollipop</b></li>
+		<li><i>wings</i></li>
+	</ul>
 
 </body>
 
